--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -437,33 +437,6 @@ a, abbr, acronym, address, applet, big, blockquote, body, caption, cite, code, d
 .overlay > .container-ov1 .content {
     color: #b9bbbe;
 }
-.thin-s::-webkit-scrollbar-track {
-    border-color: transparent;
-    background-color: transparent;
-    border: 2px solid transparent;
-}
-
-/* ==== thin scrollbar ==== */
-.thin-s::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-}
-.thin-s::-webkit-scrollbar-corner {
-    background: transparent;
-}
-.thin-s::-webkit-scrollbar-thumb {
-    background-color: var(--scrollbar-thin-thumb);
-    background-clip: padding-box;
-    border: 2px solid transparent;
-    border-radius: 4px;
-    min-height: 40px;
-}
-.thin-s::-webkit-scrollbar-track {
-    border-color: var(--scrollbar-thin-track);
-    background-color: var(--scrollbar-thin-track);
-    border: 2px solid var(--scrollbar-thin-track);
-}
-/* ========================= */
 
 .overlay > .container-ov1 .footer {
     flex: 0 0 auto;
@@ -598,29 +571,48 @@ a, abbr, acronym, address, applet, big, blockquote, body, caption, cite, code, d
     padding: 10px;
 }
 
-
-::-webkit-scrollbar {
+/* ==== thin scrollbar ==== */
+.auto-s *::-webkit-scrollbar {
     width: 8px;
     background: transparent;
 }
-
-::-webkit-scrollbar-thumb {
+.auto-s *::-webkit-scrollbar-thumb {
     background-color: rgb(170, 170, 170, 0.7);
 }
-
-::-webkit-scrollbar-thumb,::-webkit-scrollbar-track-piece {
+.auto-s *::-webkit-scrollbar-thumb, .auto-s *::-webkit-scrollbar-track-piece {
     background-clip: padding-box;
     border: 1px solid transparent;
     border-radius: 8px;
 }
-
-::-webkit-scrollbar-track-piece {
+.auto-s *::-webkit-scrollbar-track-piece {
     background-color: transparent;
 }
-
-::-webkit-scrollbar-corner { 
+.auto-s *::-webkit-scrollbar-corner { 
     background: transparent;
 }
+/* ======================== */
+
+/* ==== thin scrollbar ==== */
+.thin-s::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+.thin-s::-webkit-scrollbar-corner {
+    background: transparent;
+}
+.thin-s::-webkit-scrollbar-thumb {
+    background-color: var(--scrollbar-thin-thumb);
+    background-clip: padding-box;
+    border: 2px solid transparent;
+    border-radius: 4px;
+    min-height: 40px;
+}
+.thin-s::-webkit-scrollbar-track {
+    border-color: var(--scrollbar-thin-track);
+    background-color: var(--scrollbar-thin-track);
+    border: 2px solid var(--scrollbar-thin-track);
+}
+/* ======================== */
 
 input, select {
     border: 1px solid gray;
