added main dhtml render + button radius fix

--- a/app/app.ejs
+++ b/app/app.ejs
@@ -14,7 +14,7 @@
                 <div class="bg"></div>
                 <div class="app-layers">
                     <div class="layer base-layer" id="main-layer">
-                        <%- include('main') %>
+                        <!--<%- include('main') %>-->
                     </div>
                 </div>
                 <div class="uploadArea">
