--- a/app/app.ejs
+++ b/app/app.ejs
@@ -13,9 +13,7 @@
             <div class="app-container frame-fix">
                 <div class="bg"></div>
                 <div class="app-layers">
-                    <div class="layer base-layer" id="main-layer">
-                        <!--<%- include('main') %>-->
-                    </div>
+                    <div class="layer base-layer" id="main-layer"></div>
                 </div>
                 <div class="uploadArea">
                     <div class="uploadDropModal"></div>
