some alertex changes

--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -119,7 +119,7 @@ a, abbr, acronym, address, applet, big, blockquote, body, caption, cite, code, d
     --scrollbar-thin-thumb: #232323;
     --scrollbar-thin-track: transparent;
     --brand-color: #5865f2;
-    --brand-color: #4752c4;
+    --brand-color-1: #4752c4;
 }
 
 /*******************************************************************************
