added sys theme switcher

--- a/app/app.ejs
+++ b/app/app.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="preload dark-theme auto-s">
+<html class="preload auto-s">
 <head>
     <meta charset="UTF-8">
     <title>TJMC-Launcher</title>
