--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -356,7 +356,7 @@ a, abbr, acronym, address, applet, big, blockquote, body, caption, cite, code, d
 #progress-bar {
     width: 0;
     height: 12px;
-    background-color: var(--background-accent);
+    background-color: var(--brand-color-1);
     transition: width 0.2s;
 }
 
@@ -988,7 +988,7 @@ h5 {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: var(--background-accent-alt);
+    background-color: var(--background-accent);
     transition: .4s;
     border-radius: 50px;
     border: 1px solid rgba(126, 126, 126, 0.57);
@@ -1006,8 +1006,8 @@ h5 {
     transition: .3s;
 }
 input:checked + .toggleSwitchSlider {
-    background-color: rgb(31, 140, 11);
-    border: 1px solid rgb(31, 140, 11);
+    background-color: var(--brand-color);
+    border: 1px solid var(--brand-color);
 }
 input:checked + .toggleSwitchSlider:before {
     transform: translateX(22px);
@@ -1018,14 +1018,14 @@ input:checked + .toggleSwitchSlider:before {
     width: 100%;
     height: 8px;
     margin: 18px 0px;
-    background: var(--background-accent-alt);
+    background: var(--background-accent);
     border-radius: 3px;
     position: relative;
 }
 .slider > .slider-bar {
     transition: inherit;
     position: absolute;
-    background: var(--background-accent);
+    background: var(--brand-color);
     width: 50%;
     height: 100%;
     border-radius: 3px 0px 0px 3px;
@@ -1404,7 +1404,7 @@ input:checked + .toggleSwitchSlider:before {
     font-weight: 800;
     height: 2em;
     color: #fdfdfd;
-    font-family: Arial, Helvetica, sans-serif, system-ui;
+    font-family: Arial, system-ui;
 }
 #playButton:hover {
     background-color: var(--brand-color-1) !important;
@@ -1568,7 +1568,7 @@ input:checked + .toggleSwitchSlider:before {
     user-select: none;
 }
 .container-f .dropdown a:hover {
-    background-color: var(--background-accent);
+    background-color: var(--brand-color-1);
 }
 .button-1w5pas {
     position: relative;
