--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -991,7 +991,7 @@ h5 {
     background-color: var(--background-accent);
     transition: .4s;
     border-radius: 50px;
-    border: 1px solid rgba(126, 126, 126, 0.57);
+    border: 1px solid rgba(126, 126, 126, 0.2);
 }
 .toggleSwitchSlider:before {
     position: absolute;
@@ -999,7 +999,9 @@ h5 {
     height: 20px;
     width: 20px;
     left: 3px;
-    bottom: 3px;
+    top: 0;
+    bottom: 0;
+    margin: auto;
     background-color: white;
     box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.75);
     border-radius: 50px;
