frame ejs -> js

--- a/app/app.ejs
+++ b/app/app.ejs
@@ -8,9 +8,8 @@
 </head>
 <body>
     <div id="app-mount" class="app-mount">
-        <%- include('frame') %>
         <div class="app">
-            <div class="app-container frame-fix">
+            <div class="app-container">
                 <div class="bg"></div>
                 <div class="app-layers">
                     <div class="layer base-layer" id="main-layer"></div>
