--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -199,7 +199,7 @@ a, abbr, acronym, address, applet, big, blockquote, body, caption, cite, code, d
     display: flex;
     width: 100%;
     -webkit-app-region: drag;
-    flex-direction: row-reverse;
+    flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
@@ -207,11 +207,13 @@ a, abbr, acronym, address, applet, big, blockquote, body, caption, cite, code, d
 #frameBar #frameTitleDock {
     padding: 0 10px;
     display: flex;
+    color: var(--interactive-normal);
 }
 #frameBar #frameTitleText {
-    font-size: 14px;
-    color: white;
-    font-family: 'Candara';
+    font-size: 12px;
+    color: inherit;
+    font-weight: 800;
+    font-family: Arial;
 }
 
 #frameBar #frameButtonDockWin {
@@ -229,9 +231,9 @@ a, abbr, acronym, address, applet, big, blockquote, body, caption, cite, code, d
     background: none;
     border: none;
     height: 100%;
-    width: 28px;
+    width: 32px;
     cursor: pointer;
-    color: #ddd;
+    color: var(--interactive-normal);
     display: inline-flex;
     align-items: center;
     justify-content: center;
